WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132227
[GTK] TextTrack::addCue can raise an exception since
r163974
https://bugs.webkit.org/show_bug.cgi?id=132227
Summary
[GTK] TextTrack::addCue can raise an exception since r163974
Carlos Garcia Campos
Reported
2014-04-27 01:22:37 PDT
This broke GObject DOM bindings API, we need to add a new method and mark the old one as deprecated.
Attachments
Patch
(5.29 KB, patch)
2014-04-27 01:25 PDT
,
Carlos Garcia Campos
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2014-04-27 01:25:51 PDT
Created
attachment 230256
[details]
Patch
Carlos Garcia Campos
Comment 2
2014-04-28 01:03:36 PDT
Committed
r167875
: <
http://trac.webkit.org/changeset/167875
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug